# parallel-ecs-experiment

./: .gitignore  Cargo.toml  LICENSE  check.sh  design.md  readme.md
.github/workflows/: rust.yml
experiment/: Cargo.toml
experiment/src/: components.rs  inventory_system.rs  lib.rs  main.rs  movement_system.rs
experiment/tests/: test_resources.rs
