[package]
name = "ecs-experiment"
version = "0.1.0"
edition = "2021"
authors = ["curio.gg"]
description = "Curio ECS is a blockchain-based parallel ECS implementation"
homepage = "https://triton.one"
repository = "https://github.com/curio-research/curio-ecs"
license = "MIT License"
keywords = ["curio", "ecs", "full on-chain"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shred = "0.14.1"
specs = { version = "0.18.0", features = ["parallel", "derive"] }
